syntax = "proto3";

package message;

option go_package = "./protocol;protocol";

enum MsgType {
  UNKNOWN = 0;
  CONNECT = 1;
  CONNECT_ACK = 2;
  SEND = 3;             // 发送消息 (c2s)
  SEND_ACK = 4;         // 发送消息 ack (s2c)
  RECEIVE = 5;          // 接收消息 (s2c)
  RECEIVE_ACK = 6;      // 接收消息 ack (c2s)
  PING = 7;
  PONG = 8;
  DISCONNECT = 9;
}

message Message {
  MsgType msgType = 1;

  oneof payload {
    ConnectPacket connectPacket = 2;
    ConnectAckPacket connectAckPacket = 3;
    PingPacket pingPacket = 4;
    PongPacket pongPacket = 5;
    SendPacket sendPacket = 6;
    SendAckPacket sendAckPacket = 7;
    ReceivePacket receivePacket = 8;
    ReceiveAckPacket receiveAckPacket = 9;
  }
}

message ConnectPacket {
  string uid = 1;
  string token = 2;
  string did = 3;
}

message ConnectAckPacket {
  int32 code = 1;
}

message PingPacket {
}

message PongPacket {
}

message SendPacket {
  string conversationType = 1;
  string toID = 2;
  Payload payload = 3;
}

message Payload {
  int32 msgType = 1;
  string content = 2;
}

message SendAckPacket {
  int32 code = 1;
}

message ReceivePacket {
  string content = 1;
}

message ReceiveAckPacket {
  int32 code = 1;
}